Added a logo and text banner in front of the picture

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <div class="main">
       <div class="sidebar">
+        <div class="logo">
+          <img class="odin" src="odin-lined.png" />
+          <h1 class="logo-h1">Sign-up Form</h1>
+        </div>
         <img
           class="picture"
-          src="xenia-radchenko-ezEn4jYrVYQ-unsplash.jpg"
+          src="lerone-pieters-j57b5V7_RJw-unsplash.jpg"
           alt="side picture"
         />
       </div>
