--- a/index.html
+++ b/index.html
@@ -25,56 +25,85 @@
           src="lerone-pieters-j57b5V7_RJw-unsplash.jpg"
           alt="side picture"
         />
+        <div class="img-footer">
+          Image courtesy of Lerone Pieters on
+          <a
+            href="https://unsplash.com/es/fotos/carretera-con-vehiculos-cerca-de-edificios-j57b5V7_RJw"
+            >Unsplash</a
+          >
+        </div>
       </div>
       <div class="form-container">
         <div class="header">
-          <p class="header-text">
-            ipsum dolor sit amet consectetur, adipisicing elit. Temporibus quis
-            dolor quisquam vero impedit voluptas adipisci suscipit autem nihil?
-            Eaque corrupti in illo eveniet perferendis cum quo facere at quas
-            quidem mollitia adipisci omnis eligendi blanditiis, ducimus
-            exercitationem dolorum excepturi? Voluptatem ducimus ea odit! Sunt,
+          <p class="header-text" id="text-1">
+            This is not a real online service! You know you need something like
+            this in your life to hep you realize your deepest dreams.
           </p>
+
+          <p class="header-text" id="text-2">
+            Sign up <b>now</b> to get started.
+          </p>
+
+          <p class="header-text" id="text-3">You know you want to.</p>
         </div>
         <div class="form">
-          <h2 class="form-title">Sign-up Form</h2>
-          <form action method="get" class="fields-container">
+          <h2 class="form-title">Let's do this!</h2>
+          <form id="form-id" method="get" class="fields-container">
             <div class="group-1">
               <div class="fields">
                 <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="first-name" />
+                <input type="text" id="first-name" name="first-name" required />
               </div>
               <div class="fields">
                 <label for="email">EMAIL</label>
-                <input type="text" id="femail" name="email" />
+                <input type="email" id="femail" name="email" required />
               </div>
               <div class="fields">
                 <label for="password">PASSWORD</label>
-                <input type="text" id="password" name="password" />
+                <input type="password" id="password" name="password" required />
               </div>
             </div>
 
             <div class="group-2">
               <div class="fields">
                 <label for="last-name">LAST NAME</label>
-                <input type="text" id="flast-name" name="last-name" />
+                <input type="text" id="flast-name" name="last-name" required />
               </div>
               <div class="fields">
                 <label for="phone-number">PHONE NUMBER</label>
-                <input type="text" id="phone-number" name="phone-number" />
+                <input
+                  type="text"
+                  id="phone-number"
+                  name="phone-number"
+                  required
+                />
               </div>
               <div class="fields">
                 <label for="confirm-password">CONFIRM PASSWORD</label>
                 <input
-                  type="text"
+                  type="password"
                   id="confirm-password"
                   name="confirm-password"
+                  required
                 />
               </div>
             </div>
           </form>
         </div>
-        <div class="foot-section"></div>
+        <div class="foot-section">
+          <!-- <div class="submit-button">
+            <button>Create Account</button>
+          </div> -->
+          <input
+            class="submit-button"
+            type="submit"
+            value="Create Account"
+            form="form-id"
+          />
+          <div class="foot-text">
+            <p class="link">Already have an account? <a href="">Log In</a></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
